--- a/index.html
+++ b/index.html
@@ -7,26 +7,19 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <div id="start-screen">
-    <img src="card.png" alt="Visiting Card" class="card-img">
+  <video id="bg-video" src="intro.mp4" autoplay muted loop playsinline></video>
+  <div class="overlay">
     <h1 class="name">ANANTH NARAYAN</h1>
-    <p class="start-text">Tap to Start</p>
-  </div>
-
-  <div id="main-screen" class="hidden">
-    <video id="bg-video" src="intro.mp4" autoplay muted loop playsinline></video>
-    <div class="overlay">
-      <h2 class="name bulb">ANANTH NARAYAN</h2>
-      <div class="popup">
-        <a href="tel:+919845609400" class="btn">📞</a>
-        <a href="https://wa.me/919845609400" target="_blank" class="btn whatsapp">WhatsApp Me</a>
-        <a href="mailto:fusionlounge@gmail.com" class="btn">✉️</a>
-        <a href="https://www.linkedin.com/in/ananthnarayan007/" target="_blank" class="btn">💼</a>
-        <a href="https://justblrmatrix.com" target="_blank" class="btn">🌐</a>
-      </div>
+    <p class="tagline">MD & FOUNDER · JustBlr Matrix</p>
+    <div class="popup">
+      <a href="tel:+919845609400" class="btn">📞</a>
+      <a href="https://wa.me/919845609400" target="_blank" class="btn whatsapp">WhatsApp Me</a>
+      <a href="mailto:fusionlounge@gmail.com" class="btn">✉️</a>
+      <a href="https://www.instagram.com/justblrmatrix" target="_blank" class="btn">📸</a>
+      <a href="https://www.linkedin.com/in/ananthnarayan007/" target="_blank" class="btn">💼</a>
+      <a href="https://justblrmatrix.com" target="_blank" class="btn">🌐</a>
     </div>
   </div>
-
   <script src="script.js"></script>
 </body>
 </html>
