--- a/index.html
+++ b/index.html
@@ -10,10 +10,9 @@
   <video id="bg-video" src="intro.mp4" autoplay muted loop playsinline></video>
   <div class="overlay">
     <h1 class="name">ANANTH NARAYAN</h1>
-    <p class="tagline">MD & FOUNDER · JustBlr Matrix</p>
-    <div class="popup">
+    <div class="orbit">
       <a href="tel:+919845609400" class="btn">📞</a>
-      <a href="https://wa.me/919845609400" target="_blank" class="btn whatsapp">WhatsApp Me</a>
+      <a href="https://wa.me/919845609400" target="_blank" class="btn">💬</a>
       <a href="mailto:fusionlounge@gmail.com" class="btn">✉️</a>
       <a href="https://www.instagram.com/justblrmatrix" target="_blank" class="btn">📸</a>
       <a href="https://www.linkedin.com/in/ananthnarayan007/" target="_blank" class="btn">💼</a>
