--- a/index.html
+++ b/index.html
@@ -2,33 +2,26 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Ananth Narayan | AI Visiting Card</title>
-  <meta name="color-scheme" content="dark" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>AI Visiting Card</title>
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-  <!-- Background video (add intro.mp4 in the same folder) -->
-  <video id="bg" autoplay muted playsinline loop>
+  <video autoplay muted loop playsinline id="bg-video">
     <source src="intro.mp4" type="video/mp4" />
   </video>
-  <div class="bg-fallback"></div>
-  <div class="vignette"></div>
 
-  <main class="stage">
-    <h1 class="bulb">ANANTH&nbsp;NARAYAN</h1>
-    <p class="sub">MD & FOUNDER · JustBlr Matrix</p>
+  <div class="card">
+    <h1 class="name">ANANTH NARAYAN</h1>
+    <p class="title">MD & FOUNDER · JustBlr Matrix</p>
 
-    <!-- Circular orbit of buttons -->
-    <ul class="orbit" role="list">
-      <li><a class="btn" href="tel:+919845609400"            aria-label="Call">📞</a></li>
-      <li><a class="btn" href="https://wa.me/919845609400"   target="_blank" aria-label="WhatsApp">💬</a></li>
-      <li><a class="btn" href="mailto:fusionlounge@gmail.com" aria-label="Email">✉️</a></li>
-      <li><a class="btn" href="https://www.instagram.com/justblrmatrix" target="_blank" aria-label="Instagram">📸</a></li>
-      <li><a class="btn" href="https://www.linkedin.com/in/ananthnarayan007/" target="_blank" aria-label="LinkedIn">💼</a></li>
-      <li><a class="btn" href="https://justblrmatrix.com"    target="_blank" aria-label="Website">🌐</a></li>
-    </ul>
-  </main>
+    <div class="buttons">
+      <a href="https://wa.me/919845609400" target="_blank" class="btn">💬</a>
+      <a href="tel:+919845609400" class="btn">📞</a>
+      <a href="mailto:ananth@example.com" class="btn">✉️</a>
+      <a href="https://justblr.com" target="_blank" class="btn">🌐</a>
+    </div>
+  </div>
 
   <script src="script.js"></script>
 </body>
