--- a/index.html
+++ b/index.html
@@ -1,16 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>AI Visiting Card</title>
-  <link rel="stylesheet" href="style.css" />
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Ananth Narayan | AI Visiting Card</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
+  <!-- Background video -->
   <video autoplay muted loop playsinline id="bg-video">
-    <source src="intro.mp4" type="video/mp4" />
+    <source src="intro.mp4" type="video/mp4">
   </video>
 
+  <!-- Overlay photo -->
+  <div class="overlay-photo">
+    <img src="photo.png" alt="Ananth Narayan">
+  </div>
+
+  <!-- Text + Buttons -->
   <div class="card">
     <h1 class="name">ANANTH NARAYAN</h1>
     <p class="title">MD & FOUNDER · JustBlr Matrix</p>
@@ -18,8 +25,9 @@
     <div class="buttons">
       <a href="https://wa.me/919845609400" target="_blank" class="btn">💬</a>
       <a href="tel:+919845609400" class="btn">📞</a>
-      <a href="mailto:ananth@example.com" class="btn">✉️</a>
-      <a href="https://justblr.com" target="_blank" class="btn">🌐</a>
+      <a href="mailto:fusionlounge@gmail.com" class="btn">✉️</a>
+      <a href="https://www.linkedin.com/in/ananthnarayan007/" target="_blank" class="btn">💼</a>
+      <a href="https://justblrmatrix.com" target="_blank" class="btn">🌐</a>
     </div>
   </div>
 
