--- a/index.html
+++ b/index.html
@@ -3,26 +3,25 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>ANANTH NARAYAN - Visiting Card</title>
+  <title>AI Visiting Card - Ananth Narayan</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <video autoplay muted loop id="bg-video">
     <source src="intro.mp4" type="video/mp4">
-    Your browser does not support video.
+    Your browser does not support the video tag.
   </video>
 
-  <div class="content">
-    <h1 class="glow-text">ANANTH NARAYAN</h1>
+  <div class="card">
+    <h1 class="glow">ANANTH NARAYAN</h1>
     <h2>MD & FOUNDER · JustBlr Matrix</h2>
-
-    <div class="icon-container">
-      <div class="icon whatsapp" onclick="openLink('https://wa.me/919845609400')">💬</div>
-      <div class="icon call" onclick="openLink('tel:+919845609400')">📞</div>
-      <div class="icon mail" onclick="openLink('mailto:test@example.com')">✉️</div>
-      <div class="icon insta" onclick="openLink('https://instagram.com')">📸</div>
-      <div class="icon linkedin" onclick="openLink('https://linkedin.com')">💼</div>
-      <div class="icon web" onclick="openLink('https://justblr.com')">🌐</div>
+    <div class="icons">
+      <a href="tel:+919845609400" class="icon">📞</a>
+      <a href="https://wa.me/919845609400" class="icon">💬</a>
+      <a href="mailto:fusionlounge@gmail.com" class="icon">✉️</a>
+      <a href="https://instagram.com/justblrmatrix" class="icon">📸</a>
+      <a href="https://www.linkedin.com/in/ananthnarayan007/" class="icon">💼</a>
+      <a href="https://justblrmatrix.com" class="icon">🌐</a>
     </div>
   </div>
 
